# bmi_api_2

./: .slugignore  Cargo.toml  Procfile  README.md
.github/workflows/: test-and-deploy.yml
examples/: client.rs
src/: api.rs  lib.rs  main.rs
tests/: api.rs
